comm/mailnews/local/src/nsParseMailbox.cpp, a semaphore is not released in an error return path
Categories
(MailNews Core :: General, defect)
Tracking
(Not tracked)
People
(Reporter: ishikawa, Assigned: ishikawa)
Details
Attachments
(1 file)
A semaphore is not released in an error return path in
comm/mailnews/local/src/nsParseMailbox.cpp.
https://searchfox.org/comm-central/source/mailnews/local/src/nsParseMailbox.cpp#2272
A return statement before that is preceded by a release statement.
https://searchfox.org/comm-central/source/mailnews/local/src/nsParseMailbox.cpp#2266
The remaining code returns with a return statement at the end, and that return is preceded by a release statement.
https://searchfox.org/comm-central/source/mailnews/local/src/nsParseMailbox.cpp#2300
A simple oversight, I think.
A patch will follow.
Assignee | ||
Comment 1•11 months ago
|
||
Updated•11 months ago
|
Comment 2•11 months ago
|
||
Simple enough that I'm just going to land this now.
Pushed by benc@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/7c318cb160c7
Release semaphore in early error return path. r=benc
Assignee | ||
Comment 4•11 months ago
|
||
(In reply to Ben Campbell from comment #2)
Simple enough that I'm just going to land this now.
Thank you, Ben.
Updated•11 months ago
|
Description
•