Bug 1885812 - Release semaphore in early error return path. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D204866

--HG--
extra : rebase_source : 7d4f8349f5eb64ce81ee8de50437ca0ffb3a2b5f